Added new planet added  use_forge_settings in the orbits

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,6 @@ org.gradle.daemon=false
 
 # Dependancies
 	mc_version=1.18.2
-	be_version=6.1
+	be_version=6.2-Dev
+	bpc_version=1.0.0
 	fml_version=40.1.0
