--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="All rights reserved"
 [[mods]]
 modId="beyond_planets_dimensions"
 version="${file.jarVersion}"
-displayName="Beyond Planets"
+displayName="Beyond Planets - Dimensions"
 credits="TheRealM18"
 authors="TheRealM18"
 description='''
