fixed gradle stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,6 @@ org.gradle.daemon=false
 
 # Dependancies
 	mc_version=1.18.2
-	be_version=6.2-Dev
+	be_version=6.2
 	bpc_version=1.0.6
 	fml_version=40.1.25
